// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadialChart renders a Radial chart 1`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(100, 100)">
            <g
              transform="translate(300,200)"
              class="ez-arcs"
            >
              <path
                d="M1.2246467991473532e-14,-200L6.123233995736766e-15,-100Z"
                fill="red"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
              <path
                d="M6.123233995736766e-15,-100L0,0Z"
                fill="green"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: red; border: 2px solid red;"
          >
          </div>
          <span class="ez-legend-text">
            Alpha
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key ez-legend-disable"
        >
          <div
            class="ez-legend-box"
            style="background-color: rgba(255, 255, 255, 0); border: 2px solid blue;"
          >
          </div>
          <span class="ez-legend-text">
            Beta
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: green; border: 2px solid green;"
          >
          </div>
          <span class="ez-legend-text">
            Gamma
          </span>
        </div>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;

exports[`RadialChart renders a Radial chart 2`] = `
<div
  class="ez-viz"
  style="width: 800px; height: 600px;"
>
  <div class="ez-fragment-tooltip">
    <div class="ez-fragment-filter">
      <div class="ez-chart">
        <svg
          class="ez-svg"
          style="width: 800px; height: 600px;"
        >
          <g transform="translate(100, 100)">
            <g
              transform="translate(300,200)"
              class="ez-arcs"
            >
              <path
                d="M1.2246467991473532e-14,-200A200,200,0,0,1,200,0L100,0A100,100,0,0,0,6.123233995736766e-15,-100Z"
                fill="red"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
              <path
                d="M6.123233995736766e-15,-100A100,100,0,1,1,-70.71067811865477,-70.71067811865474L0,0Z"
                fill="green"
                stroke="#FFF"
                stroke-width="0"
                data-testid="ez-arc"
                class="ez-arc"
              >
              </path>
            </g>
          </g>
        </svg>
      </div>
      <div class="ez-legend">
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: red; border: 2px solid red;"
          >
          </div>
          <span class="ez-legend-text">
            Alpha
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key ez-legend-disable"
        >
          <div
            class="ez-legend-box"
            style="background-color: rgba(255, 255, 255, 0); border: 2px solid blue;"
          >
          </div>
          <span class="ez-legend-text">
            Beta
          </span>
        </div>
        <div
          role="button"
          class="ez-legend-key"
        >
          <div
            class="ez-legend-box"
            style="background-color: green; border: 2px solid green;"
          >
          </div>
          <span class="ez-legend-text">
            Gamma
          </span>
        </div>
      </div>
    </div>
    <div
      class="ez-tooltip"
      style="left: 0px; top: 0px; opacity: 0;"
    >
    </div>
  </div>
</div>
`;
